tests/v2.1-legacy/valid/feedback_approved.aif
@AIF/2.0
FROM: agent_reviewer
TO: agent_rd
TYPE: FEEDBACK
ID: F001
REF: R001
REPORT_TO: agent_reviewer
---
VERDICT: APPROVED
SCORE: 92/100
APPROVED_ITEMS:
  - "GET / returns 200 as required"
  - "Code is minimal and readable"
SUGGEST:
  - ID:S01
    DESC: "Add a /health endpoint for load balancer checks"
